versions/v1.2.0/modules/pt/pages/references/crds.adoc
[id="k3k-api-reference"]
:page-languages: [en, de, es, fr, ja, pt, zh]
= Referência da API
:revdate: "2026-08-26"
:page-revdate: {revdate}
:anchor_prefix: k8s-api

== Pacotes
- xref:{anchor_prefix}-k3k-io-v1beta1[$$k3k.io/v1beta1$$]


[id="{anchor_prefix}-k3k-io-v1beta1"]
== k3k.io/v1beta1


=== Tipos de Recursos
- xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-cluster[$$Cluster$$]
- xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterlist[$$ClusterList$$]
- xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-virtualclusterpolicy[$$VirtualClusterPolicy$$]
- xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-virtualclusterpolicylist[$$VirtualClusterPolicyList$$]



[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-addon"]
=== Addon



O addon especifica um Secret contendo YAML a ser implantado na inicialização do cluster.



_Aparece em:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterspec[$$ClusterSpec$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Campo | Descrição | Default | Validação
| *`secretNamespace`* __string__ | SecretNamespace é o namespace do Secret. + |  | 
| *`secretRef`* __string__ | SecretRef é o nome do Secret. + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-appliedpolicy"]
=== AppliedPolicy



AppliedPolicy define o estado observado de uma política aplicada.



_Aparece em:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterstatus[$$ClusterStatus$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Campo | Descrição | Default | Validação
| *`name`* __string__ | name é o nome da VirtualClusterPolicy atualmente aplicada a este cluster. + |  | MinLength: 1 +

| *`priorityClass`* __string__ | priorityClass é a classe de prioridade aplicada pela VirtualClusterPolicy ativa. + |  | 
| *`nodeSelector`* __object (keys:string, values:string)__ | nodeSelector é um seletor de nós aplicado pela VirtualClusterPolicy ativa. + |  | 
| *`serverAffinity`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#affinity-v1-core[$$Affinity$$]__ | serverAffinity são as regras de afinidade para os pods de servidor aplicadas pela VirtualClusterPolicy ativa. +
Isso inclui tanto regras de afinidade de nó quanto regras de afinidade/antiafinidade de pod. + |  | 
| *`agentAffinity`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#affinity-v1-core[$$Affinity$$]__ | agentAffinity são as regras de afinidade para os pods de agente aplicadas pela VirtualClusterPolicy ativa. +
Isso inclui tanto regras de afinidade de nó quanto regras de afinidade/antiafinidade de pod. + |  | 
| *`sync`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-syncconfig[$$SyncConfig$$]__ | sync é a SyncConfig aplicada pela VirtualClusterPolicy ativa. + |  | 
| *`runtimeClassName`* __string__ | RuntimeClassName especifica uma classe de runtime alternativa para os +
pods de agente e servidor do cluster no modo virtual ou shared. + |  | 
| *`podSecurityContext`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#podsecuritycontext-v1-core[$$PodSecurityContext$$]__ | PodSecurityContext especifica um SecurityContext personalizado a ser adicionado aos +
pods de agente e servidor do cluster no modo virtual ou shared. + |  | 
| *`securityContext`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#securitycontext-v1-core[$$SecurityContext$$]__ | SecurityContext especifica um SecurityContext de contêiner personalizado a ser adicionado aos +
contêineres de agente e servidor do cluster no modo virtual ou shared. + |  | 
| *`hostUsers`* __booleano__ | HostUsers define o namespace de usuário para os pods de servidor e agente. +
Se definido como true ou ausente, o pod será executado no namespace de usuário do host. +
Se definido como false, um novo userns é criado para o pod. +
Este campo é de nível alfa e só é respeitado por servidores que habilitam o recurso UserNamespacesSupport. + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-cluster"]
=== Cluster



Cluster define um cluster Kubernetes virtual gerenciado pelo k3k.
Especifica o estado desejado de um cluster virtual, incluindo versão, configuração de nós e rede. O k3k usa isso para provisionar e gerenciar esses clusters virtuais.



_Aparece em:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterlist[$$ClusterList$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Campo | Descrição | Default | Validação
| *`apiVersion`* __string__ | `k3k.io/v1beta1` |  | 
| *`kind`* __string__ | `Cluster` |  | 
| *`metadata`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#objectmeta-v1-meta[$$ObjectMeta$$]__ | Consulte a documentação da API do Kubernetes para os campos de `metadata`. |  | 
| *`spec`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterspec[$$ClusterSpec$$]__ | Spec define o estado desejado do Cluster. + | {  } | 
| *`status`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterstatus[$$ClusterStatus$$]__ | Status reflete o estado observado do cluster. + | {  } | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterlist"]
=== ClusterList



ClusterList é uma lista de recursos Cluster.





[cols="25a,55a,10a,10a", options="header"]
|===
| Campo | Descrição | Default | Validação
| *`apiVersion`* __string__ | `k3k.io/v1beta1` |  | 
| *`kind`* __string__ | `ClusterList` |  | 
| *`metadata`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#listmeta-v1-meta[$$ListMeta$$]__ | Consulte a documentação da API do Kubernetes para os campos de `metadata`. |  | 
| *`items`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-cluster[$$Cluster$$] array__ |  |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clustermode"]
=== ClusterMode

_Tipo subjacente:_ _string_

ClusterMode é o modo de provisionamento possível de um cluster.

Valores suportados: `shared`, `virtual`, `hcp`.



_Aparece em:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterspec[$$ClusterSpec$$]
* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-virtualclusterpolicyspec[$$VirtualClusterPolicySpec$$]



[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterphase"]
=== ClusterPhase

_Tipo subjacente:_ _string_

ClusterPhase é um resumo de alto nível do estado atual do ciclo de vida do cluster.



_Aparece em:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterstatus[$$ClusterStatus$$]



[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterspec"]
=== ClusterSpec



ClusterSpec define o estado desejado de um cluster Kubernetes virtual.



_Aparece em:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-cluster[$$Cluster$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Campo | Descrição | Default | Validação
| *`version`* __string__ | Versão é a versão do K3s a ser usada para os nós virtuais. +
Deve seguir a convenção de versionamento do K3s (por exemplo, v1.28.2-k3s1). +
Se não especificado, a versão do Kubernetes do nó host será usada. + |  | 
| *`mode`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clustermode[$$ClusterMode$$]__ | Mode especifica o modo de provisionamento do cluster. Este campo é imutável. + | shared | Enum: [shared virtual hcp] +

| *`servers`* __integer__ | Servidores especifica o número de pods K3s a serem executados em modo servidor (plano de controle). +
Deve ser pelo menos 1. Padrão: 1. + | 1 | 
| *`agents`* __integer__ | Agentes especifica o número de pods K3s a serem executados no modo agente (trabalhador). +
Deve ser 0 ou maior. Padrão: 0. +
Este campo é ignorado no modo "shared". + | 0 | 
| *`clusterCIDR`* __string__ | ClusterCIDR é o intervalo CIDR para IPs de pods. +
Padrão: 10.42.0.0/16 no modo shared e 10.52.0.0/16 no modo virtual. +
Este campo é imutável. + |  | 
| *`serviceCIDR`* __string__ | ServiceCIDR é o intervalo CIDR para IPs de serviços. +
Padrão: 10.43.0.0/16 no modo shared e 10.53.0.0/16 no modo virtual. +
Este campo é imutável. + |  | 
| *`clusterDNS`* __string__ | ClusterDNS é o endereço IP para o serviço CoreDNS. +
Deve estar dentro do intervalo ServiceCIDR. Padrão: 10.43.0.10. +
Este campo é imutável. + |  | 
| *`persistence`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-persistenceconfig[$$PersistenceConfig$$]__ | Persistência especifica opções para persistir dados do etcd. +
Padrão: persistência dinâmica, que usa um PersistentVolumeClaim para fornecer persistência de dados. +
Uma StorageClass padrão é necessária para persistência dinâmica. + |  | 
| *`expose`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-exposeconfig[$$ExposeConfig$$]__ | Expose especifica opções para expor o servidor da API. +
Por padrão, ele é exposto apenas como um ClusterIP. + |  | 
| *`nodeSelector`* __object (keys:string, values:string)__ | NodeSelector especifica rótulos de nó para restringir onde os pods do servidor/agente são agendados. +
No modo "shared", isso também se aplica a cargas de trabalho. + |  | 
| *`priorityClass`* __string__ | PriorityClass especifica o priorityClassName para pods de servidor/agente. +
No modo "shared", isso também se aplica a cargas de trabalho. + |  | 
| *`tokenSecretRef`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#secretreference-v1-core[$$SecretReference$$]__ | TokenSecretRef é uma referência de Secret contendo o token usado pelos nós trabalhadores para ingressar no cluster. +
O Secret deve ter um campo "token" em seus dados. + |  | 
| *`tlsSANs`* __array de string__ | TLSSANs especifica nomes alternativos de assunto para o certificado do servidor K3s. + |  | 
| *`serverArgs`* __array de string__ | ServerArgs especifica pares de chave-valor ordenados para pods de servidor K3s. +
Exemplo: ["--tls-san=example.com"] + |  | 
| *`agentArgs`* __array de string__ | AgentArgs especifica pares de chave-valor ordenados para pods de agente K3s. +
Exemplo: ["--node-name=my-agent-node"] + |  | 
| *`serverEnvs`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#envvar-v1-core[$$EnvVar$$] array__ | ServerEnvs especifica uma lista de variáveis de ambiente a serem definidas no pod do servidor. + |  | 
| *`agentEnvs`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#envvar-v1-core[$$EnvVar$$] array__ | AgentEnvs especifica uma lista de variáveis de ambiente a serem definidas no pod do agente. + |  | 
| *`addons`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-addon[$$Addon$$] array__ | Addons especifica Secrets contendo YAML bruto para implantar na inicialização do cluster. + |  | 
| *`serverLimit`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#resourcelist-v1-core[$$ResourceList$$]__ | ServerLimit especifica limites de recursos para nós de servidor. + |  | 
| *`workerLimit`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#resourcelist-v1-core[$$ResourceList$$]__ | WorkerLimit especifica limites de recursos para nós de agente. + |  | 
| *`serverResources`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#resourcerequirements-v1-core[$$ResourceRequirements$$]__ | ServerResources especifica os limites e as solicitações de recursos para os nós de servidor. + |  | 
| *`workerResources`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#resourcerequirements-v1-core[$$ResourceRequirements$$]__ | WorkerResources especifica os limites e as solicitações de recursos para os nós de trabalho. + |  | 
| *`serverAffinity`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#affinity-v1-core[$$Affinity$$]__ | ServerAffinity especifica as regras de afinidade para os pods de servidor. +
Isso inclui tanto regras de afinidade de nó quanto regras de afinidade/antiafinidade de pod. + |  | 
| *`agentAffinity`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#affinity-v1-core[$$Affinity$$]__ | AgentAffinity especifica as regras de afinidade para os pods de agente. +
Isso inclui tanto regras de afinidade de nó quanto regras de afinidade/antiafinidade de pod. + |  | 
| *`mirrorHostNodes`* __booleano__ | MirrorHostNodes controla se os objetos de nó do cluster host +
são espelhados no cluster virtual. + |  | 
| *`customCAs`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-customcas[$$CustomCAs$$]__ | CustomCAs especifica os pares de cert/key para certificados CA personalizados. + |  | 
| *`sync`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-syncconfig[$$SyncConfig$$]__ | Sync especifica os tipos de recursos que serão sincronizados do cluster virtual para o cluster host. + | {  } | 
| *`secretMounts`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-secretmount[$$SecretMount$$] array__ | SecretMounts especifica uma lista de Secrets a serem montados nos pods do servidor e do agente. +
Cada entrada define um Secret e seu caminho de montagem dentro dos pods. + |  | 
| *`podSecurityContext`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#podsecuritycontext-v1-core[$$PodSecurityContext$$]__ | PodSecurityContext especifica um PodSecurityContext personalizado a ser adicionado aos +
pods de agente e servidor do cluster no modo virtual ou shared. + |  | 
| *`securityContext`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#securitycontext-v1-core[$$SecurityContext$$]__ | SecurityContext especifica um SecurityContext de contêiner personalizado a ser adicionado aos +
contêineres de agente e servidor do cluster no modo virtual ou shared. +
Esta opção substitui o SecurityContext definido por padrão para o modo virtual. + |  | 
| *`runtimeClassName`* __string__ | RuntimeClassName especifica uma classe de runtime alternativa para os +
pods de agente e servidor do cluster no modo virtual ou shared. + |  | 
| *`hostUsers`* __booleano__ | HostUsers define o namespace de usuário para os pods de servidor e agente. +
Se definido como true ou ausente, o pod será executado no namespace de usuário do host. +
Se definido como false, um novo userns é criado para o pod. +
Este campo é de nível alfa e só é respeitado por servidores que habilitam o recurso UserNamespacesSupport. + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterstatus"]
=== ClusterStatus



ClusterStatus reflete o estado observado de um cluster.



_Aparece em:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-cluster[$$Cluster$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Campo | Descrição | Default | Validação
| *`hostVersion`* __string__ | HostVersion é a versão do Kubernetes do nó host. + |  | 
| *`clusterCIDR`* __string__ | ClusterCIDR é o intervalo CIDR para IPs de pods. + |  | 
| *`serviceCIDR`* __string__ | ServiceCIDR é o intervalo CIDR para IPs de serviços. + |  | 
| *`clusterDNS`* __string__ | ClusterDNS é o endereço IP para o serviço CoreDNS. + |  | 
| *`tlsSANs`* __array de string__ | TLSSANs especifica nomes alternativos de assunto para o certificado do servidor K3s. + |  | 
| *`policyName`* __string__ | PolicyName especifica o nome da política de cluster virtual vinculada ao cluster virtual. + |  | 
| *`policy`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-appliedpolicy[$$AppliedPolicy$$]__ | policy representa o status da política aplicada a este cluster. +
Este campo é definido pelo controlador VirtualClusterPolicy. + |  | 
| *`kubeletPort`* __integer__ | KubeletPort especifica a porta usada pelo k3k-kubelet no modo shared. + |  | 
| *`conditions`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#condition-v1-meta[$$Condition$$] array__ | Conditions são as condições individuais definidas para o cluster. + |  | 
| *`phase`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterphase[$$ClusterPhase$$]__ | Phase é um resumo de alto nível do estado atual do ciclo de vida do cluster. + | Unknown | Enum: [Pending Provisioning Ready Failed Terminating Unknown] +

|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-configmapsyncconfig"]
=== ConfigMapSyncConfig



ConfigMapSyncConfig especifica as opções de sincronização para os ConfigMaps.



_Aparece em:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-syncconfig[$$SyncConfig$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Campo | Descrição | Default | Validação
| *`enabled`* __booleano__ | Enabled é um interruptor de ligar/desligar para sincronizar recursos. + | true | 
| *`selector`* __object (keys:string, values:string)__ | Selector especifica um conjunto de rótulos dos recursos que serão sincronizados; se estiver vazio +
então todos os recursos do tipo dado serão sincronizados. + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-credentialsource"]
=== CredentialSource



CredentialSource define de onde obter uma credencial.
Pode representar um par de chaves TLS ou uma única chave privada.



_Aparece em:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-credentialsources[$$CredentialSources$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Campo | Descrição | Default | Validação
| *`secretName`* __string__ | O Secret deve conter chaves específicas com base no tipo de credencial: +
- Para pares de certificados TLS (por exemplo, ServerCA): `tls.crt` e `tls.key`. +
- Para a chave de assinatura do ServiceAccountToken: `tls.key`. + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-credentialsources"]
=== CredentialSources



Fontes de Credenciais lista todas as credenciais necessárias, incluindo pares de chaves TLS e chaves de assinatura únicas.



_Aparece em:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-customcas[$$CustomCAs$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Campo | Descrição | Default | Validação
| *`serverCA`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-credentialsource[$$CredentialSource$$]__ | ServerCA especifica o par de cert/key do servidor-ca. + |  | 
| *`clientCA`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-credentialsource[$$CredentialSource$$]__ | ClientCA especifica o par de cert/key do client-ca. + |  | 
| *`requestHeaderCA`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-credentialsource[$$CredentialSource$$]__ | RequestHeaderCA especifica o par de cert/key do request-header-ca. + |  | 
| *`etcdServerCA`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-credentialsource[$$CredentialSource$$]__ | ETCDServerCA especifica o par de cert/key do etcd-server-ca. + |  | 
| *`etcdPeerCA`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-credentialsource[$$CredentialSource$$]__ | ETCDPeerCA especifica o par de cert/key do etcd-peer-ca. + |  | 
| *`serviceAccountToken`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-credentialsource[$$CredentialSource$$]__ | ServiceAccountToken especifica a chave do service-account-token. + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-customcas"]
=== CustomCAs



CAsPersonalizadas especifica os pares de cert/key para certificados CA personalizados.



_Aparece em:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterspec[$$ClusterSpec$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Campo | Descrição | Default | Validação
| *`enabled`* __booleano__ | Habilitado ativa ou desativa este recurso. + | true | 
| *`sources`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-credentialsources[$$CredentialSources$$]__ | Fontes define as fontes para todos os certificados CA personalizados necessários. + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-exposeconfig"]
=== ExposeConfig



ExposeConfig especifica opções para expor o servidor da API.



_Aparece em:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterspec[$$ClusterSpec$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Campo | Descrição | Default | Validação
| *`ingress`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-ingressconfig[$$IngressConfig$$]__ | Ingress especifica opções para expor o servidor da API através de um Ingress. + |  | 
| *`loadBalancer`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-loadbalancerconfig[$$LoadBalancerConfig$$]__ | LoadBalancer especifica opções para expor o servidor da API através de um serviço LoadBalancer. + |  | 
| *`nodePort`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-nodeportconfig[$$NodePortConfig$$]__ | NodePort especifica opções para expor o servidor da API através de NodePort. + |  | 
| *`annotations`* __object (keys:string, values:string)__ | Annotations especifica anotações a serem adicionadas ao Service gerado. + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-ingressconfig"]
=== IngressConfig



IngressConfig especifica opções para expor o servidor da API através de um Ingress.



_Aparece em:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-exposeconfig[$$ExposeConfig$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Campo | Descrição | Default | Validação
| *`annotations`* __object (keys:string, values:string)__ | Anotações especifica anotações a serem adicionadas ao Ingress. + |  | 
| *`ingressClassName`* __string__ | IngressClassName especifica a IngressClass a ser utilizada para o Ingress. + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-ingresssyncconfig"]
=== IngressSyncConfig



IngressSyncConfig especifica as opções de sincronização para os Ingresses.



_Aparece em:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-syncconfig[$$SyncConfig$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Campo | Descrição | Default | Validação
| *`enabled`* __booleano__ | Enabled é um interruptor de ligar/desligar para sincronizar recursos. + | false | 
| *`selector`* __object (keys:string, values:string)__ | Selector especifica um conjunto de rótulos dos recursos que serão sincronizados; se estiver vazio +
então todos os recursos do tipo dado serão sincronizados. + |  | 
| *`disableTLSSecretTranslation`* __booleano__ | DisableTLSSecretTranslation é um interruptor de ligar/desligar para traduzir os secrets TLS +
do cluster virtual para o cluster host + | false | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-loadbalancerconfig"]
=== LoadBalancerConfig



LoadBalancerConfig especifica opções para expor o servidor da API através de um serviço LoadBalancer.



_Aparece em:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-exposeconfig[$$ExposeConfig$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Campo | Descrição | Default | Validação
| *`serverPort`* __integer__ | ServerPort é a porta na qual o servidor K3s é exposto quando o tipo é LoadBalancer. +
Se não especificado, a porta padrão https 443 será alocada. +
Se 0 ou negativo, a porta não será exposta. + |  | 
| *`etcdPort`* __integer__ | ETCDPort é a porta na qual o serviço ETCD é exposto quando o tipo é LoadBalancer. +
Se não especificado, a porta padrão etcd 2379 será alocada. +
Se 0 ou negativo, a porta não será exposta. + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-nodeportconfig"]
=== NodePortConfig



NodePortConfig especifica opções para expor o servidor da API através de NodePort.



_Aparece em:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-exposeconfig[$$ExposeConfig$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Campo | Descrição | Default | Validação
| *`serverPort`* __integer__ | ServerPort é a porta em cada nó na qual o servidor K3s é exposto quando o tipo é NodePort. +
Se não especificado, uma porta aleatória entre 30000-32767 será alocada. +
Se estiver fora do intervalo, a porta não será exposta. + |  | 
| *`etcdPort`* __integer__ | ETCDPort é a porta em cada nó na qual o serviço ETCD é exposto quando o tipo é NodePort. +
Se não especificado, uma porta aleatória entre 30000-32767 será alocada. +
Se estiver fora do intervalo, a porta não será exposta. + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-persistenceconfig"]
=== PersistenceConfig



PersistenceConfig especifica opções para persistir os dados do etcd.



_Aparece em:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterspec[$$ClusterSpec$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Campo | Descrição | Default | Validação
| *`type`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-persistencemode[$$PersistenceMode$$]__ | O tipo especifica o modo de persistência. + | dynamic | 
| *`storageClassName`* __string__ | StorageClassName é o nome da StorageClass a ser usada para o PVC. +
Este campo é relevante apenas no modo "dinâmico". + |  | 
| *`storageRequestSize`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#quantity-resource-api[$$Quantity$$]__ | StorageRequestSize é o tamanho solicitado para o PVC. +
Este campo é relevante apenas no modo "dinâmico". + | 2G | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-persistencemode"]
=== PersistenceMode

_Tipo subjacente:_ _string_

PersistenceMode é o modo de armazenamento de um Cluster.



_Aparece em:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-persistenceconfig[$$PersistenceConfig$$]



[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-persistentvolumeclaimsyncconfig"]
=== PersistentVolumeClaimSyncConfig



PersistentVolumeClaimSyncConfig especifica as opções de sincronização para os PersistentVolumeClaims.



_Aparece em:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-syncconfig[$$SyncConfig$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Campo | Descrição | Default | Validação
| *`enabled`* __booleano__ | Enabled é um interruptor de ligar/desligar para sincronizar recursos. + | true | 
| *`selector`* __object (keys:string, values:string)__ | Selector especifica um conjunto de rótulos dos recursos que serão sincronizados; se estiver vazio +
então todos os recursos do tipo dado serão sincronizados. + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-podsecurityadmissionlevel"]
=== PodSecurityAdmissionLevel

_Tipo subjacente:_ _string_

PodSecurityAdmissionLevel é o nível de política aplicado aos pods no namespace.

Valores suportados: `privileged`, `baseline`, `restricted`.



_Aparece em:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-virtualclusterpolicyspec[$$VirtualClusterPolicySpec$$]



[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-priorityclasssyncconfig"]
=== PriorityClassSyncConfig



PriorityClassSyncConfig especifica as opções de sincronização para as PriorityClasses.



_Aparece em:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-syncconfig[$$SyncConfig$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Campo | Descrição | Default | Validação
| *`enabled`* __booleano__ | Enabled é um interruptor de ligar/desligar para sincronizar recursos. + | false | 
| *`selector`* __object (keys:string, values:string)__ | Selector especifica um conjunto de rótulos dos recursos que serão sincronizados; se estiver vazio +
então todos os recursos do tipo dado serão sincronizados. + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-secretmount"]
=== SecretMount



SecretMount define um segredo a ser montado em pods de servidor ou agente, permitindo configurações personalizadas, certificados ou outros dados sensíveis.



_Aparece em:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterspec[$$ClusterSpec$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Campo | Descrição | Default | Validação
| *`secretName`* __string__ | secretName é o nome do segredo no namespace do pod a ser utilizado. +
Mais informações: https://kubernetes.io/docs/concepts/storage/volumes#secret + |  | 
| *`items`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#keytopath-v1-core[$$KeyToPath$$] array__ | itens: Se não especificado, cada par chave-valor no campo Data do Secret referenciado +
O Secret será projetado no volume como um arquivo cujo nome é a +
chave e o conteúdo é o valor. Se especificado, as chaves listadas serão +
projetadas nos caminhos especificados, e as chaves não listadas não estarão +
presentes. Se uma chave for especificada que não está presente no Secret, +
a configuração do volume apresentará erro, a menos que seja marcada como opcional. Os caminhos devem ser +
relativos e não podem conter o caminho '..' ou começar com '..'. + |  | 
| *`defaultMode`* __integer__ | defaultMode é Opcional: bits de modo usados para definir permissões em arquivos criados por padrão. +
Deve ser um valor octal entre 0000 e 0777 ou um valor decimal entre 0 e 511. +
YAML aceita tanto valores octais quanto decimais, JSON requer valores decimais +
para bits de modo. Padrão: 0644. +
Diretórios dentro do caminho não são afetados por esta configuração. +
Isso pode estar em conflito com outras opções que afetam o arquivo +
modo, como fsGroup, e o resultado pode ser outros bits de modo definidos. + |  | 
| *`optional`* __booleano__ | campo opcional especifica se o segredo ou suas chaves devem ser definidos + |  | 
| *`name`* __string__ | Name é o nome do volume de montagem do secret que será usado +
como nome do volume e da montagem de volume para o pod de servidor ou de agente. +
Se estiver vazio, o nome do secret será usado no lugar. + |  | MaxLength: 63 +
MinLength: 1 +
Pattern: `^[a-z0-9]([-a-z0-9]*[a-z0-9])?$` +

| *`mountPath`* __string__ | MountPath é o caminho dentro dos pods do servidor e do agente onde o +
conteúdo do segredo será montado. + |  | 
| *`subPath`* __string__ | SubPath é um caminho opcional dentro do segredo para montar em vez da raiz. +
Quando especificado, apenas a chave especificada do segredo será montada como um arquivo +
em MountPath, mantendo o diretório pai gravável. + |  | 
| *`role`* __string__ | Role é o tipo do pod k3k que será usado para montar o secret. + |  | Enum: [server agent all] +

|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-secretsyncconfig"]
=== SecretSyncConfig



SecretSyncConfig especifica as opções de sincronização para os Secrets.



_Aparece em:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-syncconfig[$$SyncConfig$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Campo | Descrição | Default | Validação
| *`enabled`* __booleano__ | Enabled é um interruptor de ligar/desligar para sincronizar recursos. + | true | 
| *`selector`* __object (keys:string, values:string)__ | Selector especifica um conjunto de rótulos dos recursos que serão sincronizados; se estiver vazio +
então todos os recursos do tipo dado serão sincronizados. + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-servicesyncconfig"]
=== ServiceSyncConfig



ServiceSyncConfig especifica as opções de sincronização para os Services.



_Aparece em:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-syncconfig[$$SyncConfig$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Campo | Descrição | Default | Validação
| *`enabled`* __booleano__ | Enabled é um interruptor de ligar/desligar para sincronizar recursos. + | true | 
| *`selector`* __object (keys:string, values:string)__ | Selector especifica um conjunto de rótulos dos recursos que serão sincronizados; se estiver vazio +
então todos os recursos do tipo dado serão sincronizados. + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-storageclasssyncconfig"]
=== StorageClassSyncConfig



StorageClassSyncConfig especifica as opções de sincronização para as StorageClasses.



_Aparece em:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-syncconfig[$$SyncConfig$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Campo | Descrição | Default | Validação
| *`enabled`* __booleano__ | Enabled é um interruptor de ligar/desligar para sincronizar recursos. + | false | 
| *`selector`* __object (keys:string, values:string)__ | Selector especifica um conjunto de rótulos dos recursos que serão sincronizados; se estiver vazio +
então todos os recursos do tipo dado serão sincronizados. + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-syncconfig"]
=== SyncConfig



SyncConfig conterá os recursos que devem ser sincronizados do cluster virtual para o cluster host.



_Aparece em:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-appliedpolicy[$$AppliedPolicy$$]
* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterspec[$$ClusterSpec$$]
* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-virtualclusterpolicyspec[$$VirtualClusterPolicySpec$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Campo | Descrição | Default | Validação
| *`services`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-servicesyncconfig[$$ServiceSyncConfig$$]__ | Configuração de sincronização de recursos de serviços. + | { enabled:true } | 
| *`configMaps`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-configmapsyncconfig[$$ConfigMapSyncConfig$$]__ | Configuração de sincronização de recursos de ConfigMaps. + | { enabled:true } | 
| *`secrets`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-secretsyncconfig[$$SecretSyncConfig$$]__ | Configuração de sincronização de recursos de segredos. + | { enabled:true } | 
| *`ingresses`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-ingresssyncconfig[$$IngressSyncConfig$$]__ | Configuração de sincronização de recursos de Ingresses. + | { enabled:false } | 
| *`persistentVolumeClaims`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-persistentvolumeclaimsyncconfig[$$PersistentVolumeClaimSyncConfig$$]__ | Configuração de sincronização de recursos de PersistentVolumeClaims. + | { enabled:true } | 
| *`priorityClasses`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-priorityclasssyncconfig[$$PriorityClassSyncConfig$$]__ | Configuração de sincronização de recursos de PriorityClasses. + | { enabled:false } | 
| *`storageClasses`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-storageclasssyncconfig[$$StorageClassSyncConfig$$]__ | Configuração de sincronização dos recursos StorageClasses. + | { enabled:false } | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-virtualclusterpolicy"]
=== VirtualClusterPolicy



VirtualClusterPolicy permite definir configurações e restrições comuns para clusters dentro de uma política de cluster.



_Apresenta em:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-virtualclusterpolicylist[$$VirtualClusterPolicyList$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Campo | Descrição | Default | Validação
| *`apiVersion`* __string__ | `k3k.io/v1beta1` |  | 
| *`kind`* __string__ | `VirtualClusterPolicy` |  | 
| *`metadata`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#objectmeta-v1-meta[$$ObjectMeta$$]__ | Consulte a documentação da API do Kubernetes para os campos de `metadata`. |  | 
| *`spec`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-virtualclusterpolicyspec[$$VirtualClusterPolicySpec$$]__ | Spec define o estado desejado da VirtualClusterPolicy. + | {  } | 
| *`status`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-virtualclusterpolicystatus[$$VirtualClusterPolicyStatus$$]__ | Status reflete o estado observado da VirtualClusterPolicy. + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-virtualclusterpolicylist"]
=== VirtualClusterPolicyList



VirtualClusterPolicyList é uma lista de recursos de VirtualClusterPolicy.





[cols="25a,55a,10a,10a", options="header"]
|===
| Campo | Descrição | Default | Validação
| *`apiVersion`* __string__ | `k3k.io/v1beta1` |  | 
| *`kind`* __string__ | `VirtualClusterPolicyList` |  | 
| *`metadata`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#listmeta-v1-meta[$$ListMeta$$]__ | Consulte a documentação da API do Kubernetes para os campos de `metadata`. |  | 
| *`items`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-virtualclusterpolicy[$$VirtualClusterPolicy$$] array__ |  |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-virtualclusterpolicyspec"]
=== VirtualClusterPolicySpec



VirtualClusterPolicySpec define o estado desejado de uma VirtualClusterPolicy.



_Apresenta em:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-virtualclusterpolicy[$$VirtualClusterPolicy$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Campo | Descrição | Default | Validação
| *`quota`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#resourcequotaspec-v1-core[$$ResourceQuotaSpec$$]__ | Quota especifica os limites de recursos para clusters dentro de uma política de cluster. + |  | 
| *`limit`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#limitrangespec-v1-core[$$LimitRangeSpec$$]__ | Limit especifica o LimitRange que será aplicado a todos os pods dentro da VirtualClusterPolicy +
para definir padrões e restrições (min/max) + |  | 
| *`defaultNodeSelector`* __object (keys:string, values:string)__ | DefaultNodeSelector especifica o seletor de nós que se aplica a todos os clusters (servidor + agente) no Namespace de destino. + |  | 
| *`defaultPriorityClass`* __string__ | DefaultPriorityClass especifica o priorityClassName aplicado a todos os pods de todos os clusters no Namespace de destino. + |  | 
| *`defaultServerAffinity`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#affinity-v1-core[$$Affinity$$]__ | DefaultServerAffinity especifica as regras de afinidade aplicadas aos pods de servidor de todos os clusters no namespace de destino. +
Isso inclui tanto regras de afinidade de nó quanto regras de afinidade/antiafinidade de pod. + |  | 
| *`defaultAgentAffinity`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#affinity-v1-core[$$Affinity$$]__ | DefaultAgentAffinity especifica as regras de afinidade aplicadas aos pods de agente de todos os clusters no namespace de destino. +
Isso inclui tanto regras de afinidade de nó quanto regras de afinidade/antiafinidade de pod. + |  | 
| *`allowedMode`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clustermode[$$ClusterMode$$]__ | AllowedMode especifica o modo de provisionamento de cluster permitido. + | shared | Enum: [shared virtual hcp] +

| *`disableNetworkPolicy`* __booleano__ | DisableNetworkPolicy indica se deve desabilitar a criação de uma política de rede padrão para isolamento de cluster. + |  | 
| *`podSecurityAdmissionLevel`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-podsecurityadmissionlevel[$$PodSecurityAdmissionLevel$$]__ | PodSecurityAdmissionLevel especifica o nível de admissão de segurança de pod aplicado aos pods no namespace. + |  | Enum: [privileged baseline restricted] +

| *`sync`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-syncconfig[$$SyncConfig$$]__ | Sync especifica os tipos de recursos que serão sincronizados do cluster virtual para o cluster host. + | {  } | 
| *`runtimeClassName`* __string__ | SecurityContext especifica um SecurityContext personalizado a ser adicionado aos +
pods de agente e servidor do cluster no modo virtual ou shared. + |  | 
| *`securityContext`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#securitycontext-v1-core[$$SecurityContext$$]__ | RuntimeClassName especifica uma classe de runtime alternativa para os +
pods de agente e servidor do cluster no modo virtual ou shared. + |  | 
| *`hostUsers`* __booleano__ | HostUsers define o namespace de usuário para os pods de servidor e agente. +
Se definido como true ou ausente, o pod será executado no namespace de usuário do host. +
Se definido como false, um novo userns é criado para o pod. +
Este campo é de nível alfa e só é respeitado por servidores que habilitam o recurso UserNamespacesSupport. + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-virtualclusterpolicystatus"]
=== VirtualClusterPolicyStatus



VirtualClusterPolicyStatus reflete o estado observado de uma VirtualClusterPolicy.



_Aparece em:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-virtualclusterpolicy[$$VirtualClusterPolicy$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Campo | Descrição | Default | Validação
| *`observedGeneration`* __integer__ | ObservedGeneration era a geração no momento em que o status foi atualizado. + |  | 
| *`lastUpdateTime`* __string__ | LastUpdate é o carimbo de data/hora da última atualização do status. + |  | 
| *`summary`* __string__ | Summary é um resumo do status. + |  | 
| *`conditions`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#condition-v1-meta[$$Condition$$] array__ | Conditions são as condições individuais definidas para o cluster. + |  | 
|===


